# sphynx

./: .editorconfig  .gitignore  Cargo.toml  README.md  REUSE.toml  clippy.toml  flake.nix  justfile
.github/workflows/: ci.yaml
LICENSES/: MIT.txt
src/: error.rs  iana.rs  lib.rs  parse.rs  raw.rs  sdp.rs
src/iana/: generated.rs
src/sdp/: attributes.rs
xtask/: Cargo.toml
xtask/src/: main.rs
